--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_SERVER= 192.168.1.12\MYSQLSERVERDB
+DB_SERVER= Anas_Butt\MYSQLSERVERDB
 DB_USER=sa
 DB_PASSWORD=Butt
 DB_NAME=Hospital_Management
